NavBar: Fixing alignment of quick create button

--- a/themes/SuiteP/css/navbar.scss
+++ b/themes/SuiteP/css/navbar.scss
@@ -924,8 +924,7 @@
   background-position: 80px 2px;
   background-repeat: no-repeat;
   color: $navbar-quick-create-link-color;
-  padding: 0px 32px 0px 12px;
-  line-height: $button-line-height;
+  padding: 10px 32px 14px 12px;
   border-radius: 3px;
   letter-spacing: 2px;
   text-align: center;
