--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -1236,8 +1236,7 @@ footer.collapsedSidebar {
   background-position: 80px 2px;
   background-repeat: no-repeat;
   color: #FFFFFF;
-  padding: 0px 32px 0px 12px;
-  line-height: 40px;
+  padding: 10px 32px 14px 12px;
   border-radius: 3px;
   letter-spacing: 2px;
   text-align: center;
